classDiagram
direction LR

%% ==================== BACKEND - CONTROLLER ====================

class CouponController {
    <<backend controller>>
    - _couponService : ICouponService
    
    + CreateCoupon(request: CreateCouponRequestDTO) Task~IActionResult~
}

%% ==================== BACKEND - DTOs ====================

class CreateCouponRequestDTO {
    <<dto>>
    + CouponCode : string
    + CouponType : string
    + DiscountValue : decimal
    + MinOrderValue : decimal
    + StartDate : DateTime?
    + EndDate : DateTime?
    + UsageLimit : int?
}

%% ==================== BACKEND - DOMAIN ENTITIES ====================

class Coupon {
    <<entity>>
    + CouponId : int
    + ManagerId : int?
    + CouponCode : string
    + CouponType : string?
    + DiscountValue : decimal
    + MinOrderValue : decimal
    + StartDate : DateTime?
    + EndDate : DateTime?
    + UsageLimit : int?
    + UsedCount : int?
    + IsActive : bool?
}

%% ==================== BACKEND - SERVICE INTERFACES ====================

class ICouponService {
    <<service interface>>
    + CreateAsync(req: CreateCouponRequestDTO, managerId: int) Task~bool~ *
}

class ICouponRepository {
    <<repository interface>>
    + GetByCodeAsync(code: string) Task~Coupon?~ *
    + AddAsync(coupon: Coupon) Task~void~ *
    + SaveChangesAsync() Task~int~ *
}

%% ==================== BACKEND - SERVICE IMPLEMENTATION ====================

class CouponService {
    <<service>>
    - _couponRepository : ICouponRepository
    
    + CreateAsync(req: CreateCouponRequestDTO, managerId: int) Task~bool~
    - NormalizeType(type: string) string
    - ValidateCreate(req: CreateCouponRequestDTO) void
}

%% ==================== BACKEND - REPOSITORY IMPLEMENTATION ====================

class CouponRepository {
    <<repository>>
    - _context : AppDbContext
    
    + GetByCodeAsync(code: string) Task~Coupon?~
    + AddAsync(coupon: Coupon) Task~void~
    + SaveChangesAsync() Task~int~
}

%% ==================== BACKEND - DbContext ====================

class AppDbContext {
    <<dbcontext>>
    + Coupons : DbSet~Coupon~
    
    + SaveChangesAsync() Task~int~
    # OnConfiguring(optionsBuilder: DbContextOptionsBuilder) void
    # OnModelCreating(modelBuilder: ModelBuilder) void
}

%% ==================== RELATIONSHIPS ====================

%% === UNIDIRECTIONAL ASSOCIATION (solid arrow) ===
CouponController --> ICouponService
CouponService --> ICouponRepository
CouponRepository --> AppDbContext

%% === INTERFACE REALIZATION ===
CouponService ..|> ICouponService
CouponRepository ..|> ICouponRepository

%% === DEPENDENCY (dashed arrows) ===
CouponController ..> CreateCouponRequestDTO
CouponService ..> CreateCouponRequestDTO
CouponService ..> Coupon
CouponRepository ..> Coupon

%% ==================== STYLES ====================

classDef default fill:#FFFFFF,stroke:#000000,stroke-width:1px,color:#000000
